# pdf_extract_rust_wasm

./: Cargo.toml  README.md
src/: main.rs
