[package]
name = "pdf_extract_rust_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pdf-extract = "0.7.2"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
